automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return abs(first_neg)"
+    "    return abs(first_neighbor['street'] - )"
    ]
   },
   {
