--- a/index.ipynb
+++ b/index.ipynb
@@ -246,14 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return abs(first_neighbor['avenue'] - second_neighbor['avenue'])"
    ]
   },
   {
