--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return street_distance() + avenue_distance"
+    "    return street_distance(first_neighbor, second_neighbor) + avenue_distance(first_neighbor,)"
    ]
   },
   {
