--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    math.sqrt(distance_betwe)"
+    "    math.sqrtdistance_between_neighbors_squared(first_neighbor, second_neighbor)"
    ]
   },
   {
