--- a/index.ipynb
+++ b/index.ipynb
@@ -334,23 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    math.sqrtdistance_between_neighbors_squared(first_neighbor, second_neighbor)"
+    "    math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "distance(fred, natalie) # 4.123105625617661"
