--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "17"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,20 +334,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
+    "    return math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.123105625617661"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance(fred, natalie) # 4.123105625617661"
    ]
