--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,8 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    neighbor_with_distance = second_neighbor.copy()\n",
-    "    neighbor_with_distance['distance'] = distance(first_neighbor, second_neighbor)"
+    "    neighbor_with_distance['distance'] = distance(first_neighbor, second_neighbor)\n",
+    "    return neighbor"
    ]
   },
   {
