--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    remaining_neighbors = filter(lambda x: x != first_neighbor, neighbors)"
+    "    remaining_neighbors = filter(lambda x: x != first_neighbor, neighbors)\n",
+    "    "
    ]
   },
   {
