--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    remaining_neighbors = filter(lambda x: x != first_neighbor, neighbors)\n",
-    "    return lambda x: distance_with_neighbor()"
+    "    return lambda x: distance_with_neighbor(first_neighbor, )"
    ]
   },
   {
