--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    number "
+    "    number = number or len()"
    ]
   },
   {
