--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    number = number or len()"
+    "    number = number or len(neighbors)\n",
+    "    "
    ]
   },
   {
