--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number or len(neighbors)\n",
     "    neighbor_distances = distance_all(selected_individual, neighbors)\n",
-    "    sorted_neighbors = sorted(neighbor_distances,)"
+    "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: n)"
    ]
   },
   {
