--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number or len(neighbors)\n",
-    "    neighbor_distances = distance_all(selected_individual, neighbors)\n",
+    "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: n)"
    ]
   },
