--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,8 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number or len(neighbors)\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
-    "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: ['distance'])"
+    "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: ['distance'])\n",
+    "    return sorted_neighbors[:numb]"
    ]
   },
   {
