--- a/index.ipynb
+++ b/index.ipynb
@@ -516,26 +516,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number or len(neighbors)\n",
     "    neighbor_distances = distance_all(first_neighbor, neighbors)\n",
     "    sorted_neighbors = sorted(neighbor_distances, key=lambda neighbor: ['distance'])\n",
-    "    return sorted_neighbors[:numb]"
+    "    return sorted_neighbors[:number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
     "# [{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
